--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,11 +4,13 @@ services:
     ports:
       - "8501:8501"
     volumes:
-      - ./app.py:/app/app.py
-      - ./data:/app/data
-      - ./vectorstore:/app/vectorstore
-      - ./.env:/app/.env
+      - .:/app
+      - /app/.venv
+      - /app/__pycache__
+      - /app/.git
     environment:
       - PYTHONPATH=/app
+      - STREAMLIT_SERVER_RUN_ON_SAVE=true
+      - STREAMLIT_SERVER_FILE_WATCHER_TYPE=auto
     stdin_open: true
     tty: true
