--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,19 +1,20 @@
 [tool.poetry]
 name = "coding-qa-bot"
 version = "0.1.0"
-description = "コーディング規約QAボット"
+description = "コーディング規約QAボット - RAG技術を活用したAI質問応答システム"
 authors = ["Your Name <your.email@example.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.11"
 streamlit = "^1.32.0"
-langchain = "^0.1.0"
-langchain-community = "^0.0.24"
-langchain-openai = "^0.0.8"
-chromadb = "^0.4.24"
+langchain = "^0.3.25"
+langchain-community = "^0.3.25"
+langchain-openai = "^0.3.22"
 pypdf2 = "^3.0.1"
 python-dotenv = "^1.0.1"
-tiktoken = "^0.6.0"
+tiktoken = "^0.9.0"
+langchain-chroma = "^0.2.4"
+chromadb = "^1.0.12"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0.0"
