--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
   qa-bot:
     build: .
     # Streamlit を明示起動
-    command: streamlit run app.py --server.port 8501 --server.address 0.0.0.0
+    command: streamlit run main.py --server.port 8501 --server.address 0.0.0.0
     ports:
       - "8501:8501"
     volumes:
